--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h1 class="text-3xl lg:text-4xl text-gray-300 mb-2" style="color: #bebebe;">MAIN MENU</h1>
         <ul class="text-2xl lg:text-3xl space-y-1" style="color: #969696;">
             <li><a href="/" class="hover:text-red-900 active:text-red-900 transition-colors">HOME</a></li>
-            <li><a href="/games.html" class="hover:text-red-900 active:text-red-900 transition-colors">GAMES</a></li>
+            <li><a href="/list.html" class="hover:text-red-900 active:text-red-900 transition-colors">GAMES</a></li>
             <li><a href="/updates.html" class="hover:text-red-900 active:text-red-900 transition-colors">UPDATES</a></li>
             <li><a href="/contact.html" class="hover:text-red-900 active:text-red-900 transition-colors">CONTACT</a></li>
             </ul>
