--- a/list.html
+++ b/list.html
@@ -23,7 +23,7 @@
         body {
             font-family: 'Cutive+Mono', monospace;
             background: #000000;
-            background-image: url('img_4868.jpeg');
+            background-image: url('IMG_4868.jpeg');
             background-attachment: fixed;
             background-size: cover;
             background-position: center;
