--- a/list.html
+++ b/list.html
@@ -24,7 +24,8 @@
             background: #000000;
             background-image: url('IMG_4868.jpeg');
             background-attachment: fixed;
-            background-size: cover;
+            background-size: contain;
+            background-repeat: no-repeat;
             background-position: center;
             min-height: 100vh;
             color: #e5e5e5;
