--- a/list.html
+++ b/list.html
@@ -22,10 +22,9 @@
         body {
             font-family: 'Cutive+Mono', monospace;
             background: #000000;
-            background-image: url('https://raw.githubusercontent.com/dzvnl/ewsite/IMG_4868.jpeg');
+            background-image: url('IMG_4868');
             background-attachment: fixed;
             background-size: contain;
-            background-repeat: no-repeat;
             background-position: center;
             min-height: 100vh;
             color: #e5e5e5;
