--- a/list.html
+++ b/list.html
@@ -176,12 +176,12 @@
 <body>
 
     <nav class="fixed top-0 left-0 p-6 sm:p-8 pixel-font z-10" style="padding-top: 50px;">
-        <h1 class="text-3xl lg:text-4xl text-gray-300 mb-2" style="color: #bebebe;">MAIN MENU</h1>
+        <h1 class="text-3xl lg:text-4xl text-gray-300 mb-2" style="color: #bebebe;"></h1>
         <ul class="text-2xl lg:text-3xl space-y-1" style="color: #969696;">
-            <li><a href="/" class="hover:text-red-900 active:text-red-900 transition-colors">HOME</a></li>
-            <li><a href="/games" class="hover:text-red-900 active:text-red-900 transition-colors">GAMES</a></li>
-            <li><a href="/updates" class="hover:text-red-900 active:text-red-900 transition-colors">UPDATES</a></li>
-            <li><a href="/contact" class="hover:text-red-900 active:text-red-900 transition-colors">CONTACT</a></li>
+            <li><a href="/index" class="hover:text-red-900 active:text-red-900 transition-colors">home</a></li>
+            <li><a href="/games" class="hover:text-red-900 active:text-red-900 transition-colors">list</a></li>
+            <li><a href="/updates" class="hover:text-red-900 active:text-red-900 transition-colors">updates</a></li>
+            <li><a href="/contact" class="hover:text-red-900 active:text-red-900 transition-colors">contact</a></li>
         </ul>
     </nav>
 
