--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             
             const secretSong = {
                 title: "hey, big guy said im an easter egg",
-                artist: "i heard, if u put /secret at the end of the link",
+                artist: "i heard, hit home?",
                 src: baseURL + "clock.mp3",
                 cover: baseURL + "handofpeace.jpg"
             };
