--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EWSITE - CONTACT</title>
+    <title>canvas</title>
     <!-- Load Tailwind CSS via CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
     <header class="p-6 bg-gray-900/50 border-b border-red-900 shadow-xl">
         <div class="max-w-7xl mx-auto">
             <!-- Link back to the home page -->
-            <a href="index.html" class="text-xl font-bold text-white tracking-widest hover:text-red-700 transition">EWS Home</a>
+            <a href="index.html" class="text-xl font-bold text-white tracking-widest hover:text-red-700 transition">ews</a>
         </div>
     </header>
 
