--- a/secrets.html
+++ b/secrets.html
@@ -1,4 +1,4 @@
-DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,7 +17,7 @@ DOCTYPE html>
 </head>
 <body class="bg-black text-white">
 
-            <a href="index.html" class="text-xl font-bold text-white tracking-widest hover:text-red-700 transition">EWS Home</a>
+            <a href="index.html" class="text-xl font-bold text-white tracking-widest hover:text-red-700 transition">ews</a>
     
     <!-- Main Content Area - Centered Text Block -->
     <main class="flex flex-col items-center justify-center p-8 h-full" style="min-height: calc(100vh - 5rem);">
