--- a/list.html
+++ b/list.html
@@ -56,7 +56,7 @@
         /* --- NEW STANDARDIZED PLAYER CSS (replaces your old one) --- */
         #music-player-widget {
             position: fixed;
-            bottom: 1.5rem; /* Standardized to bottom-right */
+            top: 1.5rem; /* Standardized to bottom-right */
             right: 1.5rem;
             z-index: 50;
             width: 320px; 
