--- a/list.html
+++ b/list.html
@@ -22,7 +22,7 @@
         body {
             font-family: 'Cutive+Mono', monospace;
             background: #000000;
-            background-image: url('IMG_4868');
+            background-image: url('listimg.jpg');
             background-attachment: fixed;
             background-size: contain;
             background-position: center;
