--- a/index.html
+++ b/index.html
@@ -150,9 +150,10 @@
                 // --- NEW RANDOM BACKGROUND LOGIC ---
                 const backgroundOptions = [
                     'IMG_4928.jpeg', // Your original image
-                    'placeholder_image_1.jpg', // <-- Add your image file names here
-                    'placeholder_image_2.png', // <-- Add another one
-                    'another_background.gif'   // <-- And another
+                    'IMG_4946.jpeg', // <-- Add your image file names here
+                    'IMG_4944.jpeg', // <-- Add another one
+                    'IMG_4943.jpeg',   // <-- And another
+                    'IMG_4945.jpeg'
                     // Add as many file paths as you want to this list
                 ];
                 
