--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
                     'IMG_4946.jpeg', // <-- Add your image file names here
                     'IMG_4944.jpeg', // <-- Add another one
                     'IMG_4943.jpeg',   // <-- And another
-                    'IMG_4945.jpeg'
+                    'IMG_4945.jpeg',
+                    '81853ABB-FB87-4A20-9303-9624B777245B.jpeg'
                     // Add as many file paths as you want to this list
                 ];
                 
