--- a/list.html
+++ b/list.html
@@ -214,14 +214,14 @@
                 </a>
                 
                 <a href="goi.html" class="game-item group block w-full text-left bg-gray-900/70 rounded-lg border-2 border-red-900 overflow-hidden transition-all duration-200 hover:border-red-700 hover:scale-[1.03] hover:shadow-2xl hover:shadow-red-900/30">
-                    <img src="https://m.media-amazon.com/images/M/MV5BN2JjOGU2MGUtOGZmMC00NGViLWE0ZmUtYTJiNWM2YWVlNjVkXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpgBennett_Foddy_cover_art.jpg" alt="Getting Over It" class="w-full game-poster-img">
+                    <img src="https://static.wikia.nocookie.net/listofdeaths/images/2/2e/Getting_Over_It_with_Bennett_Foddy.jpg/revision/latest?cb=20240409224522" alt="Getting Over It" class="w-full game-poster-img">
                     <h3 class="p-4 text-lg font-semibold text-gray-200 group-hover:text-red-600 transition-colors">
                         5. getting Over It
                     </h3>
                 </a>
 
                 <a href="fnafs.html" class="game-item group block w-full text-left bg-gray-900/70 rounded-lg border-2 border-red-900 overflow-hidden transition-all duration-200 hover:border-red-700 hover:scale-[1.03] hover:shadow-2xl hover:shadow-red-900/30">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1e/Five_Nights_at_Freddy%27s.svg/330px-Five_Nights_at_Freddy%27s.svg.png" alt="FNAF" class="w-full game-poster-img">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKenT9j5RL950ZpSaQrdNGONEidi73Sf-5tw&amp;s" alt="FNAF" class="w-full game-poster-img">
                     <h3 class="p-4 text-lg font-semibold text-gray-200 group-hover:text-red-600 transition-colors">
                         6. fnaf 1 - sl
                     </h3>
@@ -285,7 +285,7 @@
                     </h3>
                 </a>
                 <a href="fish.html" class="game-item group block w-full text-left bg-gray-900/70 rounded-lg border-2 border-red-900 overflow-hidden transition-all duration-200 hover:border-red-700 hover:scale-[1.03] hover:shadow-2xl hover:shadow-red-900/30">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/e/eb/Webfishing_logo.png/250px-Webfishing_logo.png" alt="Webfishing" class="w-full game-poster-img">
+                    <img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSh3dj3zuDNhEM0u7hBlrDyF683dGVuqERUOg&amp;s" alt="Webfishing" class="w-full game-poster-img">
                     <h3 class="p-4 text-lg font-semibold text-gray-200 group-hover:text-red-600 transition-colors">
                         17. webfishing
                     </h3>
@@ -405,14 +405,14 @@
                 </a>
 
             <a href="codwow.html" class="game-item group block w-full text-left bg-gray-900/70 rounded-lg border-2 border-red-900 overflow-hidden transition-all duration-200 hover:border-red-700 hover:scale-[1.03] hover:shadow-2xl hover:shadow-red-900/30">
-                <img src="https://upload.wikimedia/en/thumb/6/69/WAW_Cover_Art.jpg/250px-WAW_Cover_Art.jpg" alt="CoD: World at War" class="w-full game-poster-img">
+                <img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/69/WAW_Cover_Art.jpg/250px-WAW_Cover_Art.jpg" alt="CoD: World at War" class="w-full game-poster-img">
             <h3 class="p-4 text-lg font-semibold text-gray-200 group-hover:text-red-600 transition-colors">
                     33. cod world at war
             </h3>
             </a>
 
             <a href="halflife.html" class="game-item group block w-full text-left bg-gray-900/70 rounded-lg border-2 border-red-900 overflow-hidden transition-all duration-200 hover:border-red-700 hover:scale-[1.03] hover:shadow-2xl hover:shadow-red-900/30">
-               <img src="https://upload.wikimedia/en/thumb/f/fa/Half-Life_Cover_Art.jpg/250px-Half-Life_Cover_Art.jpg" alt="Half-Life" class="w-full game-poster-img">
+               <img src="https://upload.wikimedia.org/wikipedia/en/f/fa/Half-Life_Cover_Art.jpg" alt="Half-Life" class="w-full game-poster-img">
                     <h3 class="p-4 text-lg font-semibold text-gray-200 group-hover:text-red-600 transition-colors">
                         34. half life
                     </h3>
