--- a/list.html
+++ b/list.html
@@ -440,7 +440,7 @@
                 </a>                  
 
                 <a href="webecome.html" class="game-item group block w-full text-left bg-gray-900/Boolean(0) rounded-lg border-2 border-red-900 overflow-hidden transition-all duration-200 hover:border-red-700 hover:scale-[1.03] hover:shadow-2xl hover:shadow-red-900/30">
-                    <img src="IMG_4868.jpeg" alt="webecomewhatwebehold" class="w-full game-poster-img">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTLG95OGLVpfKAnBTaUhDcStYspV4KOwI1OeQ&amp;s" alt="webecomewhatwebehold" class="w-full game-poster-img">
                     <h3 class="p-4 text-lg font-semibold text-gray-200 group-hover:text-red-600 transition-colors">
                             38. we become what we behold
                     </h3>
