--- a/list.html
+++ b/list.html
@@ -284,12 +284,14 @@
                         16. slenderman
                     </h3>
                 </a>
+                
                 <a href="fish.html" class="game-item group block w-full text-left bg-gray-900/70 rounded-lg border-2 border-red-900 overflow-hidden transition-all duration-200 hover:border-red-700 hover:scale-[1.03] hover:shadow-2xl hover:shadow-red-900/30">
-                    <img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSh3dj3zuDNhEM0u7hBlrDyF683dGVuqERUOg&amp;s" alt="Webfishing" class="w-full game-poster-img">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSh3dj3zuDNhEM0u7hBlrDyF683dGVuqERUOg&amp;s" alt="Webfishing" class="w-full game-poster-img">
                     <h3 class="p-4 text-lg font-semibold text-gray-200 group-hover:text-red-600 transition-colors">
                         17. webfishing
                     </h3>
                 </a>
+                        
                 <a href="yandere.html" class="game-item group block w-full text-left bg-gray-900/70 rounded-lg border-2 border-red-900 overflow-hidden transition-all duration-200 hover:border-red-700 hover:scale-[1.03] hover:shadow-2xl hover:shadow-red-900/30">
                     <img src="https://mediaproxy.tvtropes.org/width/1200/https://static.tvtropes.org/pmwiki/pub/images/yandere_simulator.png" alt="Yandere Simulator" class="w-full game-poster-img">
                     <h3 class="p-4 text-lg font-semibold text-gray-200 group-hover:text-red-600 transition-colors">
