--- a/list.html
+++ b/list.html
@@ -214,9 +214,9 @@
                 </a>
                 
                 <a href="goi.html" class="game-item group block w-full text-left bg-gray-900/70 rounded-lg border-2 border-red-900 overflow-hidden transition-all duration-200 hover:border-red-700 hover:scale-[1.03] hover:shadow-2xl hover:shadow-red-900/30">
-                    <img src="https://static.wikia.nocookie.net/listofdeaths/images/2/2e/Getting_Over_It_with_Bennett_Foddy.jpg/revision/latest?cb=20240409224522" alt="Getting Over It" class="w-full game-poster-img">
+                    <img src="https://m.media-amazon.com/images/M/MV5BN2JjOGU2MGUtOGZmMC00NGViLWE0ZmUtYTJiNWM2YWVlNjVkXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="Getting Over It" class="w-full game-poster-img">
                     <h3 class="p-4 text-lg font-semibold text-gray-200 group-hover:text-red-600 transition-colors">
-                        5. getting Over It
+                        5. Getting Over It
                     </h3>
                 </a>
 
