--- a/list.html
+++ b/list.html
@@ -168,6 +168,7 @@
             <li><a href="/games" class="hover:text-red-900 active:text-red-900 transition-colors">list</a></li>
             <li><a href="/updates" class="hover:text-red-900 active:text-red-900 transition-colors">updates</a></li>
             <li><a href="/contact" class="hover:text-red-900 active:text-red-900 transition-colors">contact</a></li>
+            <li><a href="/xp" class=hover:tect-red-900 active:text-red-900 transition-colors">watch</a></li>
         </ul>
     </nav>
 
@@ -178,8 +179,8 @@
 
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 font-inter text-left">
 
-                <a href="ai.html" class="game-item group block w-full text-left bg-gray-900/70 rounded-lg border-2 border-red-900 overflow-hidden transition-all duration-200 hover:border-red-700 hover:scale-[1.03] hover:shadow-2xl hover:shadow-red-900/30">
-                    <img src="https://i.imgur.com/gGi14mJ.png" alt="Gemini AI" class="w-full game-poster-img" onerror="this.onerror=null;this.src='https://placehold.co/400x600/1f2937/dc2626?text=AI+CHAT';">
+                <a href="gemini.google.com" class="game-item group block w-full text-left bg-gray-900/70 rounded-lg border-2 border-red-900 overflow-hidden transition-all duration-200 hover:border-red-700 hover:scale-[1.03] hover:shadow-2xl hover:shadow-red-900/30">
+                    <img src="" alt="google gemini" class="w-full game-poster-img" onerror="this.onerror=null;this.src='https://placehold.co/400x600/1f2937/dc2626?text=AI+CHAT';">
                     <h3 class="p-4 text-lg font-semibold text-gray-200 group-hover:text-red-600 transition-colors">
                         0. ai
                     </h3>
