--- a/xp.html
+++ b/xp.html
@@ -1,1 +1,28 @@
-HOLD UP!!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        body {
+            min-height: 100vh;
+        }
+    </style>
+</head>
+<body class="bg-black text-white flex items-center justify-center p-4">
+
+    <div class="text-center">
+
+      <a href="www.xprime.tv" 
+           target="_blank" 
+           class="text-2xl sm:text-3xl md:text-5xl font-mono text-red-700 hover:text-white transition duration-300 underline underline-offset-8 decoration-2"
+           rel="noopener noreferrer">
+this is NOT my website, THIS IS SAFE, just go into settings and turn off ads/use an adblocker, disclaimer!!!!   lmao    </a>
+        <p class="mt-4 text-sm text-gray-400">
+        </p>
+    </div>
+
+</body>
+</html>
