--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
     <audio id="audio-player"></audio>
     <div id="music-player-widget" class="pixel-font">
-        <img id="player-cover-art" src="httpsa://placehold.co/64x64/000000/333333?text=...&font=vt323" alt="Album Cover">
+        <img id="player-cover-art" src="https://placehold.co/64x64/000000/333333?text=...&font=vt323" alt="Album Cover">
         <div id="player-main">
             <div id="player-info-container" title="...">
                 <div id="player-title">...</div>
