--- a/list.html
+++ b/list.html
@@ -492,7 +492,7 @@
         </div>
     </div>
     
-    <div id="game-overlay" class="fixed top-0 left-0 w-full h-full bg-black z-50" style="display: none;">
+    <div id="game-overlay" class="fixed top-0 left-0 w-full h-full bg-white z-50" style="display: none;">
         <button id="close-game-btn" class="pixel-font fixed top-4 right-5 text-red-600 text-5xl z-[60] hover:text-white transition-colors">
             X
         </button>
