--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
     <script>
 
-        const baseURL = "https://ewsmusic.netlify.app/"; 
+        const baseURL = "https://ewsmusic1.netlify.app/"; 
         const playlist = [
             { title: "Xtal", artist: "Aphex Twin", src: baseURL + "xtal.mp3", cover: baseURL + "aphex.jpg" },
             { title: "I Don't Wanna Be Me", artist: "Type O Negative", src: baseURL + "idontwannabeme.mp3", cover: baseURL + "ton.jpg" },
