--- a/list.html
+++ b/list.html
@@ -449,10 +449,10 @@
                     </h3>
                 </a>
                 
-                <a href="goaway.html" class="game-item group block w-full text-left bg-gray-900/Boolean(0) rounded-lg border-2 border-red-900 overflow-hidden transition-all duration-200 hover:border-red-700 hover:scale-[1.03] hover:shadow-2xl hover:shadow-red-900/30">
+                <a href="gunspin.html" class="game-item group block w-full text-left bg-gray-900/Boolean(0) rounded-lg border-2 border-red-900 overflow-hidden transition-all duration-200 hover:border-red-700 hover:scale-[1.03] hover:shadow-2xl hover:shadow-red-900/30">
                     <img src="" alt="" class="w-full game-poster-img">
                     <h3 class="p-4 text-lg font-semibold text-gray-200 group-hover:text-red-600 transition-colors">
-                            39.
+                            39. gunspin
                     </h3>
                 </a>
                     <a href="goaway.html" class="game-item group block w-full text-left bg-gray-900/Boolean(0) rounded-lg border-2 border-red-900 overflow-hidden transition-all duration-200 hover:border-red-700 hover:scale-[1.03] hover:shadow-2xl hover:shadow-red-900/30">
