--- a/list.html
+++ b/list.html
@@ -450,7 +450,7 @@
                 </a>
                 
                 <a href="gunspin.html" class="game-item group block w-full text-left bg-gray-900/Boolean(0) rounded-lg border-2 border-red-900 overflow-hidden transition-all duration-200 hover:border-red-700 hover:scale-[1.03] hover:shadow-2xl hover:shadow-red-900/30">
-                    <img src="" alt="" class="w-full game-poster-img">
+                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple123/v4/b2/97/a6/b297a646-beee-ee0b-15b2-1c20760ebe0d/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-85-220.png/200x200ia-75.webp" alt="" class="w-full game-poster-img">
                     <h3 class="p-4 text-lg font-semibold text-gray-200 group-hover:text-red-600 transition-colors">
                             39. gunspin
                     </h3>
