--- a/xp.html
+++ b/xp.html
@@ -15,7 +15,7 @@
 
     <div class="text-center">
 
-      <a href="www.xprime.tv" 
+      <a href="https://www.xprime.tv/" 
            target="_blank" 
            class="text-2xl sm:text-3xl md:text-5xl font-mono text-red-700 hover:text-white transition duration-300 underline underline-offset-8 decoration-2"
            rel="noopener noreferrer">
