--- a/xp.html
+++ b/xp.html
@@ -19,7 +19,7 @@
            target="_blank" 
            class="text-2xl sm:text-3xl md:text-5xl font-mono text-red-700 hover:text-white transition duration-300 underline underline-offset-8 decoration-2"
            rel="noopener noreferrer">
-this is NOT my website, THIS IS SAFE, just go into settings and turn off ads/use an adblocker, disclaimer!!!!   lmao    </a>
+you are LEAVING my website, okay? this website IS safe, okay? okay.   </a>
         <p class="mt-4 text-sm text-gray-400">
         </p>
     </div>
