--- a/list.html
+++ b/list.html
@@ -168,7 +168,8 @@
             <li><a href="/games" class="hover:text-red-900 active:text-red-900 transition-colors">list</a></li>
             <li><a href="/updates" class="hover:text-red-900 active:text-red-900 transition-colors">updates</a></li>
             <li><a href="/contact" class="hover:text-red-900 active:text-red-900 transition-colors">contact</a></li>
-            <li><a href="/xp" class=hover:tect-red-900 active:text-red-900 transition-colors">watch</a></li>
+            <li><a href="/xp" class="hover:tect-red-900 active:text-red-900 transition-colors">watch</a></li>
+            <li><a href="/proxy" class="hover:tect-red-90 active:text-red-900 trasition-colors">proxy</li>
         </ul>
     </nav>
 
