--- a/proxy.html
+++ b/proxy.html
@@ -1,1 +1,1 @@
-<a href="https://yodelling-amberly-ewsite-0c6ae866.koyeb.app/">
+<a href="https://yodelling-amberly-ewsite-0c6ae866.koyeb.app/"></a>
