--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
             <li><a href="/list" class="hover:text-red-900">list</a></li>
             <li><a href="/updates" class="hover:text-red-900">updates</a></li>
             <li><a href="/contact" class="hover:text-red-900">contact</a></li>
+            <li><a href="https://yodelling-amberly-ewsite-0c6ae866.koyeb.app/" class="hover:tect-red-90 active:text-red-900 trasition-colors">proxy</li>
+
         </ul>
     </nav>
 
