--- a/xp.html
+++ b/xp.html
@@ -15,7 +15,7 @@
 
     <div class="text-center">
 
-      <a href="https://watch.spencerdevs.xyz/" 
+      <a href="https://xprime.tv" 
            class="text-2xl sm:text-3xl md:text-5xl font-mono text-red-700 hover:text-white transition duration-300 underline underline-offset-8 decoration-2"
            rel="noopener noreferrer">
 you are LEAVING my website, okay? this website IS safe, okay? okay.   </a>
