--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
             { title: "blow me", artist: "fakemink", src: baseURL + "blowme.mp3", cover: baseURL + "fakeminkk.jpg" },
             { title: "minerva", artist: "deftones", src: baseURL + "minerva.mp3", cover: baseURL + "deftones.jpg" },
             { title: "hold on", artist: "limpbizkit", src: baseURL + "holdon.mp3", cover: baseURL + "limpbizkit.jpg" },
-            { title: "my way", artist: "limpbizkit", src: baseURL + "myway.mp3", cover: baseURL + "limpbizkit.jpg" }
+            { title: "my way", artist: "limpbizkit", src: baseURL + "myway.mp3", cover: baseURL + "limpbizkit.jpg" },
+            { title: "new update soon", artist: "-nl", src: baseURL + "xtal.mp3", cover: baseURL + "aphextwin.jpg" }
+
         ];
 
         document.addEventListener('DOMContentLoaded', () => {
@@ -196,12 +198,12 @@
                 const splashElement = document.getElementById('splash-text');
                 if (splashElement) {
                     const splashOptions = [
-                        "are you a freshman?", "2 sweet teas and...", "bbq chicken alert", 
-                        "trick or treat, smell my.. donuts..", "pull up to ur block with intelligence",
-                        "john deere approved!", "long live futtbucker67", "six seven", "oh brother..",
-                        "are you even an ew student?", "i added the proxy and ai", "get the bawlls!!",
-                        "six one", "add jiggletip on clash, i only got 2100 though, am willing to put up a good game",
-                        "sorry but you are not a sigma", "idk really what to say"
+                        "blacked out like an lv sandal", "son", "bbq chicken alert", 
+                        "trick or treat.. smell my.. donuts..", "100 perkaholic or pounded by a margwa",
+                        "considering a page", "long live futtbucker", "six seven", "oh brother..",
+                        "are you even an ew student?", "i bet ur failing", "get the bawlls!!",
+                        "six one", "add jiggletip on clash", "new stuff soon",
+                        "WE yes WE are brainless and failing", "updates soon.. -nl" "no super seniors", "considering a chat board"
                     ];
                     splashElement.textContent = splashOptions[Math.floor(Math.random() * splashOptions.length)];
                 }
