--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
             <li><a href="/list" class="hover:text-red-900">list</a></li>
             <li><a href="/updates" class="hover:text-red-900">updates</a></li>
             <li><a href="/contact" class="hover:text-red-900">contact</a></li>
-            <li><a href="https://yodelling-amberly-ewsite-0c6ae866.koyeb.app/" class="hover:tect-red-90 active:text-red-900 trasition-colors">proxy</li>
-
+            <li><a href="https://yodelling-amberly-ewsite-0c6ae866.koyeb.app/" class="hover:text-red-900 active:text-red-900 transition-colors">proxy</a></li>
         </ul>
     </nav>
 
@@ -203,7 +202,7 @@
                         "considering a page", "long live futtbucker", "six seven", "oh brother..",
                         "are you even an ew student?", "i bet ur failing", "get the bawlls!!",
                         "six one", "add jiggletip on clash", "new stuff soon",
-                        "WE yes WE are brainless and failing", "updates soon.. -nl" "no super seniors", "considering a chat board"
+                        "WE yes WE are brainless and failing", "updates soon.. -nl", "no super seniors", "considering a chat board"
                     ];
                     splashElement.textContent = splashOptions[Math.floor(Math.random() * splashOptions.length)];
                 }
