--- a/terraria.html
+++ b/terraria.html
@@ -20,7 +20,7 @@
 		<% if (process.env.VITE_SIMPLE_DOWNLOAD) { %>
 		<meta name="robots" content="noindex, nofollow" />
 		<% } %>
-		<title>Terrarium</title>
+		<title>terraria</title>
 	</head>
 
 	<body>
