--- a/acontact.html
+++ b/acontact.html
@@ -35,13 +35,13 @@
             <p class="text-lg text-gray-300 leading-relaxed">
 hi whats up
 the current contact methods for ews are
-@qeils on discord
+@llnvzd on ig
 626-567-0387 calls/texts are both taken btw                
-soon i will update with probably an email and an instagram handle
+soon i will update with probably an email
 
 
 i also have a lot of ideas, as you may too, 
-please share with me what you would like
+please share with me what you would like:p
                                            </p>
             
         </div>
