--- a/acontact.html
+++ b/acontact.html
@@ -33,15 +33,9 @@
             
             <!-- Paragraph Text (Now a single block and the only content) -->
             <p class="text-lg text-gray-300 leading-relaxed">
-hi whats up
-the current contact methods for ews are
-@llnvzd on ig
-626-567-0387 calls/texts are both taken btw                
-soon i will update with probably an email
+there are no current contact methods....
+soon there will be an email.............
 
-
-i also have a lot of ideas, as you may too, 
-please share with me what you would like:p
                                            </p>
             
         </div>
