--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             color: #e5e5e5;
             background-color: #000000; 
             /* Fallback */
-            background-image: url('IMG_4928.jpeg'); 
+            background-image: url('IMG_4928jpeg'); 
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
