--- a/list.html
+++ b/list.html
@@ -167,7 +167,7 @@
             <li><a href="/index" class="hover:text-red-900 active:text-red-900 transition-colors">home</a></li>
             <li><a href="/games" class="hover:text-red-900 active:text-red-900 transition-colors">list</a></li>
             <li><a href="/updates" class="hover:text-red-900 active:text-red-900 transition-colors">updates</a></li>
-            <li><a href="/chat" class="hover:text-red-900 active:text-red-900 transition-colors">contact</a></li>
+            <li><a href="/chat" class="hover:text-red-900 active:text-red-900 transition-colors">chat</a></li>
             <li><a href="/xp" class="hover:tect-red-900 active:text-red-900 transition-colors">watch</a></li>
         </ul>
     </nav>
