--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <li><a href="/secrets" class="hover:text-red-900">home</a></li>
             <li><a href="/list" class="hover:text-red-900">list</a></li>
             <li><a href="/updates" class="hover:text-red-900">updates</a></li>
-            <li><a href="/contact" class="hover:text-red-900">contact</a></li>
+            <li><a href="/chat" class="hover:text-red-900">chat</a></li>
             <li><a href="https://yodelling-amberly-ewsite-0c6ae866.koyeb.app/" class="hover:text-red-900">proxy</a></li>
         </ul>
     </nav>
