--- a/index.html
+++ b/index.html
@@ -97,6 +97,44 @@
             border-radius: 50%;
             margin-top: -7px; 
         }
+        /* --- COMPREHENSIVE CHAT WIDGET CSS --- */
+#chat-widget {
+    position: fixed; top: 100px; left: 100px; width: 350px; height: 450px;
+    background: rgba(0, 0, 0, 0.95); border: 2px solid #333;
+    display: flex; flex-direction: column; z-index: 9999;
+    box-shadow: 0 0 20px rgba(0,0,0,0.7); resize: both; overflow: hidden;
+}
+#chat-widget.minimized { height: 36px !important; resize: none; }
+#chat-widget.closed { display: none; }
+
+#chat-header {
+    background: #222; padding: 8px; cursor: move; display: flex;
+    justify-content: space-between; align-items: center; border-bottom: 1px solid #444;
+}
+#chat-messages { flex-grow: 1; padding: 10px; overflow-y: auto; font-family: 'VT323'; }
+#chat-input-area { background: #111; padding: 8px; border-top: 1px solid #444; }
+#chat-input { width: 100%; background: #000; color: #facc15; border: 1px solid #333; padding: 4px; outline: none; }
+
+.msg-row { margin-bottom: 8px; border-left: 2px solid transparent; padding-left: 5px; }
+.msg-row:hover { border-left: 2px solid #444; }
+.msg-user { font-weight: bold; color: #888; cursor: pointer; }
+.msg-user.admin { color: #ff4444; text-shadow: 0 0 5px rgba(255,0,0,0.3); }
+.msg-text { color: #eee; margin-left: 5px; }
+
+/* Reply & Admin UI */
+.reply-to { font-size: 0.8rem; color: #facc15; display: block; margin-bottom: 2px; opacity: 0.7; }
+.msg-actions { font-size: 0.7rem; margin-top: 2px; display: none; gap: 8px; }
+.msg-row:hover .msg-actions { display: flex; }
+.action-link { cursor: pointer; color: #666; text-decoration: underline; }
+.action-link:hover { color: #fff; }
+
+/* Staff Menu Popup */
+#staff-panel {
+    position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);
+    background: #000; border: 2px solid #ff4444; padding: 20px; z-index: 10000;
+    display: none; width: 300px; box-shadow: 0 0 30px rgba(255,0,0,0.4);
+}
+
     </style>
 </head>
 <body>
