--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             background-color: rgba(0, 0, 0, 0.8);
             border: none;
             padding: 0.75rem;
-            display: flex;
+            display: flex;gn
             align-items: center;
             border-radius: 4px; /* Optional: adds slight rounding */
         }
@@ -124,7 +124,7 @@
     <div class="fixed top-0 right-0 p-4 pixel-font text-yellow-400 text-sm sm:text-base text-right z-10">
         <p>2.0</p>
         <p id="welcome-message">Welcome, ?</p>
-        <a href="#" id="auth-link" class="text-xs" style="color: #969696;">(sign up / sign in)</a>
+        <a href="login.html" id="auth-link" class="text-xs" style="color: #969696;">(sign up / sign in)</a>
     </div>
 
     <audio id="audio-player"></audio>
