--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 </div>
 
 <div class="fixed top-0 right-0 p-4 pixel-font text-yellow-400 text-sm sm:text-base text-right z-10">
-    <p>2.0</p>
+    <li><a href="/chat">2.0</a></li>
     <p id="welcome-message">Welcome, ?</p>
     <a href="#" id="auth-link" class="text-xs hover:text-yellow-400 transition-colors" style="color: #969696;">(sign up / sign in)</a>
 </div>
