--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 
-```
+
 <style>
     html, body { height: 100%; scroll-behavior: smooth; }
     body {
@@ -388,7 +388,7 @@
     });
 </script>
 ```
-<script type="module" src="chat-.js"></script>
+<script type="module" src="chat.js"></script>
 
 </body>
 </html>
