--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 <div class="fixed top-0 right-0 p-4 pixel-font text-yellow-400 text-sm sm:text-base text-right z-10">
 <div class="fixed top-0 right-0 p-4 ...">
-    <li><a href="javascript:void(0)" onclick="openChat()">2.0</a></li>
+<li><a href="chat.html" class="hover:text-red-900">2.0</a></li>
     <p id="welcome-message">Welcome, ?</p>
     <a href="#" id="auth-link" class="text-xs hover:text-yellow-400 transition-colors" style="color: #969696;">(sign up / sign in)</a>
 </div>
