--- a/chat.html
+++ b/chat.html
@@ -105,7 +105,7 @@
         </div>
     </div>
 
-    <script type="module" src="chat-page-logic.js"></script>
+    <script type="module" src="greendot.js"></script>
     
     <script>
         // Menu Toggle Logic
