--- a/chat.html
+++ b/chat.html
@@ -12,70 +12,88 @@
             background: url('IMG_4928.jpeg') no-repeat center center fixed;
             background-size: cover;
             height: 100vh;
-            overflow: hidden;
+            margin: 0;
             display: flex;
             justify-content: center;
             align-items: center;
+            padding: 10px; /* Provides breathing room on mobile */
         }
-        /* The "Black Box" Container */
+
+        /* Responsive Container */
         #chat-container {
-            width: 80%;
-            height: 80%;
+            width: 100%;
+            max-width: 800px; /* Limits width on desktop */
+            height: 85vh; /* Leaves room for background visibility */
             background: rgba(0, 0, 0, 0.9);
             border: 2px solid #969696;
             display: flex;
             flex-direction: column;
             position: relative;
+            box-shadow: 0 0 20px rgba(0,0,0,0.8);
         }
+
         #chat-messages {
             flex-grow: 1;
             overflow-y: auto;
-            padding: 20px;
+            padding: 15px;
             color: #e5e5e5;
-            font-size: 1.2rem;
+            font-size: 1.1rem;
+            line-height: 1.2;
         }
+
         #chat-input-area {
             border-top: 1px dotted #555;
-            padding: 15px;
+            padding: 10px;
             display: flex;
-            gap: 10px;
+            gap: 8px;
         }
+
         input {
             flex-grow: 1;
             background: #111;
             border: 1px solid #444;
             color: #facc15;
-            padding: 8px;
+            padding: 6px 10px;
             outline: none;
+            font-size: 1rem;
         }
+
+        /* Top Bar Indicators */
         .online-indicator {
             position: absolute;
-            top: 10px;
-            left: 10px;
+            top: 12px;
+            left: 12px;
             display: flex;
             align-items: center;
-            gap: 5px;
+            gap: 6px;
             color: #4ade80;
         }
-        .dot { width: 8px; height: 8px; background: #4ade80; border-radius: 50%; box-shadow: 0 0 5px #4ade80; }
+        .dot { width: 6px; height: 6px; background: #4ade80; border-radius: 50%; box-shadow: 0 0 5px #4ade80; }
         
-        /* Dropdown Menu Styles */
-        .user-menu { position: absolute; top: 10px; right: 10px; }
+        /* Person Outline Icon */
+        .user-menu { position: absolute; top: 8px; right: 12px; }
+        #user-display { background: none; border: none; cursor: pointer; padding: 4px; }
+        .person-icon { width: 24px; height: 24px; fill: #facc15; }
+
         .dropdown {
             display: none;
             position: absolute;
             right: 0;
+            top: 100%;
             background: #1a1a1a;
             border: 1px solid #969696;
-            min-width: 120px;
+            min-width: 130px;
             z-index: 100;
         }
         .dropdown a {
             display: block;
-            padding: 8px;
+            padding: 10px;
             color: #969696;
             text-decoration: none;
+            font-size: 1rem;
+            border-bottom: 1px solid #333;
         }
+        .dropdown a:last-child { border-bottom: none; }
         .dropdown a:hover { background: #333; color: #facc15; }
         .show { display: block; }
     </style>
@@ -85,12 +103,17 @@
     <div id="chat-container">
         <div class="online-indicator">
             <div class="dot"></div>
-            <span id="user-count">00 ONLINE</span>
+            <span id="user-count">0</span>
         </div>
 
         <div class="user-menu">
-            <button id="user-display" onclick="toggleMenu()" style="color: #facc15; cursor: pointer;">[ LOG IN ]</button>
+            <button id="user-display" onclick="toggleMenu()">
+                <svg class="person-icon" viewBox="0 0 24 24">
+                    <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"/>
+                </svg>
+            </button>
             <div id="user-dropdown" class="dropdown">
+                <a href="#" id="display-name" style="color:#fff; pointer-events:none;">GUEST</a>
                 <a href="/account">ACCOUNT</a>
                 <a href="/settings">SETTINGS</a>
                 <a href="#" onclick="logout()">LOGOUT</a>
@@ -100,29 +123,25 @@
         <div id="chat-messages"></div>
 
         <div id="chat-input-area">
-            <input type="text" id="msg-input" placeholder="Type message..." autocomplete="off">
+            <input type="text" id="msg-input" placeholder="Type..." autocomplete="off">
             <button onclick="send()" style="color: #facc15;">[SEND]</button>
         </div>
     </div>
 
-    <script type="module" src="greendot.js"></script>
+    <script type="module" src="chat-page-logic.js"></script>
     
     <script>
-        // Menu Toggle Logic
         function toggleMenu() {
             document.getElementById("user-dropdown").classList.toggle("show");
         }
         window.onclick = function(event) {
-            if (!event.target.matches('#user-display')) {
-                var dropdowns = document.getElementsByClassName("dropdown");
-                for (var i = 0; i < dropdowns.length; i++) {
-                    dropdowns[i].classList.remove('show');
-                }
+            if (!event.target.closest('#user-display')) {
+                document.getElementById("user-dropdown").classList.remove('show');
             }
         }
         function logout() {
             localStorage.removeItem('username');
-            window.location.href = 'index.html';
+            window.location.href = 'login.html';
         }
     </script>
 </body>
