--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
     <ul class="text-2xl lg:text-3xl space-y-1" style="color: #969696;">
         <li><a href="/secrets" class="hover:text-red-900">home</a></li>
         <li><a href="/list" class="hover:text-red-900">list</a></li>
+        <li><a href="/chat" class="hover:text-red-900">chat</a></li>
         <li><a href="/settings" class="hover:text-red-900">settings</a></li>
-        <li><a href="https://yodelling-amberly-ewsite-0c6ae866.koyeb.app/" class="hover:text-red-900 active:text-red-900 transition-colors">proxy</a></li>
     </ul>
 </nav>
 
